mobile fix overflow

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ footer {
 }
 
 #construction {
-  padding: 1rem;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
